--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:30:18.803Z
-Commit: Add dark mode support
+Timestamp: 2025-11-06T00:30:24.610Z
+Commit: Patch security vulnerability in authentication
